Program Files have been added by the Author

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Landing Page">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Aaradhy Sharma">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/logo.png" type="image/png" sizes="16x16">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
