Project Files updated: Upgraded functionality

--- a/index.html
+++ b/index.html
@@ -6,7 +6,73 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Aaradhy Sharma">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/logo.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="Assets/raiden_icon.jpeg" sizes="16x16">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+<body>
+    <div class="headerContainer">    
+    <header class="siteHeader">
+        <div class="headerIcon">
+        <img src="Assets/raiden_header.jpeg" alt="Raiden header" class="header_icon">
+        </div>
+        <div class="headerTitle">
+        <h2 class="header_title">The Raiden Shogun Shrine</h1>
+        </div>
+        <div class="headerLinks">
+        <nav>
+            <ul class="nav_links" id="navLinks">
+                <li class="nav_link_item"><a class="navLink" href="#">Home</a></li> <span class="navLinkDivider">|</span>
+                <li class="nav_link_item"><a class="navLink" href="#">About Me</a></li> <span class="navLinkDivider">|</span>
+                <li class="nav_link_item"><a class="navLink" href="#">Projects</a></li> <span class="navLinkDivider">|</span>
+                <li class="nav_link_item"><a class="navLink" href="#">Contact Me</a></li> 
+        </nav>
+        </div>
+    </header>
+    </div>
+    <main>
+        <div class="bodyElement bodyFirstElement">
+            <div class="cardContainer">
+                <div class="card buildCard">
+                    <img class="cardImage cardIamgeRaidenBuild" src="Assets/raiden_buildCard2.png" alt="Raiden Build card">
+                    <h3 class="cardHeader">Build</h3>
+                    <p class="cardText">Want to see how my relatively f2p raiden looks like? Press the link below to find out how!</p>
+                    <a class="cardLink" href="build.html" class="cardButton">Go to Build</a>
+                </div>
+                <div class="card guideCard">
+                    <img class="cardImage cardIamgeRaidenGuide" src="Assets/raiden_guideCard.jpeg" alt="Raiden Guide card">
+                    <h3 class="cardHeader">Guide</h3>
+                    <p class="cardText">Want to know how to build your raiden? Go to the guide page using the link below!</p>
+                    <a class="cardLink" href="guide.html" class="cardButton">Go to Guide</a>
+                </div>
+                <div class="card loreCard">
+                    <img class="cardImage cardIamgeRaidenLore" src="Assets/raiden_loreCard.gif" alt="Raiden Lore card">
+                    <h3 class="cardHeader">Lore</h3>
+                    <p class="cardText">To read the lore that makes Ei absolutely incredible, follow the link below!</p>
+                    <a class="cardLink" href="lore.html" class="cardButton">Go to Lore</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="bodyElement bodySecondElement">
+            <div class="quoteDiv">
+            <h1 class="quote"> "Reality is the stillness burried deep within the Illusion"</h1>
+            <p class="quoteAuthor">-Raiden Shogun</p>
+            </div>
+        </div>
+
+        <div class="bodyElement bodyThirdElement">
+            <div class="aboutEiDiv">
+                <h1 class="aboutEiHeader">About Ei</h1>
+                <p id="aboutEiText" class="aboutEiText">Raiden Ei (Japanese: 雷電影 Raiden Ei), also known by her Goetic name Beelzebul, is the God of Eternity and the current Electro Archon who presides over Inazuma. She is a member of The Seven who also currently functions as the Raiden Shogun of Inazuma.
+
+                    The previous Electro Archon, Ei's older twin sister Makoto, also known as Baal, died 500 years ago in the cataclysm. Since then, Ei has assumed the Shogunate and continued to rule under the name Baal.
+                    
+                    Since Ei cloistered herself to meditate in the Plane of Euthymia, her puppet has been in charge of Inazuman civil affairs. Since the events of Act II of the Imperatrix Umbrosa Chapter, she has decided to relinquish her original idiosyncrasies and work with the puppet, which has its own consciousness, to further Inazuma with a more forward-thinking governance..</p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p class="footer copyright">Copywright Ⓒ Aaradhy Sharma 2023</p>
+    </footer>
+</body>
